--- a/src/components/DishItem.css
+++ b/src/components/DishItem.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center; 
-
+}
 .dish-item img {
     width: 100%;
     height: auto;
